user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### allow udp 137,138 0.0.0.0/0 any 0.0.0.0/0 Samba - in
-A ufw-user-input -p udp -m multiport --dports 137,138 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### allow tcp 139,445 0.0.0.0/0 any 0.0.0.0/0 Samba - in
-A ufw-user-input -p tcp -m multiport --dports 139,445 -j ACCEPT -m comment --comment 'dapp_Samba'

### tuple ### allow tcp 22 0.0.0.0/0 any 0.0.0.0/0 OpenSSH - in
-A ufw-user-input -p tcp --dport 22 -j ACCEPT -m comment --comment 'dapp_OpenSSH'

### tuple ### allow tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j ACCEPT

### tuple ### route:allow any any 0.0.0.0/0 any 0.0.0.0/0 in_wg0!out_wlo1
-A ufw-user-forward -i wg0 -o wlo1 -j ACCEPT

### tuple ### allow tcp 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j ACCEPT

### tuple ### allow tcp 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 53 -j ACCEPT

### tuple ### allow udp 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 53 -j ACCEPT

### tuple ### allow tcp 8096 0.0.0.0/0 any 127.0.0.1 in comment=50726f787920746f204a656c6c7966696e
-A ufw-user-input -p tcp --dport 8096 -s 127.0.0.1 -j ACCEPT

### tuple ### allow tcp 8096 0.0.0.0/0 any 172.29.0.0/16 in comment=446f636b6572204172726e657420746f204a656c6c7966696e
-A ufw-user-input -p tcp --dport 8096 -s 172.29.0.0/16 -j ACCEPT

### tuple ### deny any 8096 0.0.0.0/0 any 0.0.0.0/0 in comment=44656e79204a656c6c7966696e20746f20616e797468696e6720656c7365
-A ufw-user-input -p tcp --dport 8096 -j DROP
-A ufw-user-input -p udp --dport 8096 -j DROP

### tuple ### allow tcp 8080 0.0.0.0/0 any 127.0.0.1 in comment=50726f787920746f2071426974546f7272656e74
-A ufw-user-input -p tcp --dport 8080 -s 127.0.0.1 -j ACCEPT

### tuple ### allow tcp 8080 0.0.0.0/0 any 172.29.0.0/16 in comment=446f636b6572204172726e657420746f2071426974546f7272656e74
-A ufw-user-input -p tcp --dport 8080 -s 172.29.0.0/16 -j ACCEPT

### tuple ### deny any 8080 0.0.0.0/0 any 0.0.0.0/0 in comment=44656e792071426974546f7272656e7420746f20616e797468696e6720656c7365
-A ufw-user-input -p tcp --dport 8080 -j DROP
-A ufw-user-input -p udp --dport 8080 -j DROP

### tuple ### deny any 139 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 139 -j DROP
-A ufw-user-input -p udp --dport 139 -j DROP

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-I ufw-logging-deny -m conntrack --ctstate INVALID -j RETURN -m limit --limit 3/min --limit-burst 10
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] " -m limit --limit 3/min --limit-burst 10
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
